--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,24 +1,25 @@
-# Test executables
-add_executable(test_basic test_basic.cpp)
+# Functional tests
+add_executable(test_basic functional/test_basic.cpp)
 target_link_libraries(test_basic eshm)
 
-add_executable(test_master_slave test_master_slave.cpp)
+add_executable(test_master_slave functional/test_master_slave.cpp)
 target_link_libraries(test_master_slave eshm)
 
-add_executable(test_auto_role test_auto_role.cpp)
+add_executable(test_auto_role functional/test_auto_role.cpp)
 target_link_libraries(test_auto_role eshm)
 
-add_executable(test_stale_detection test_stale_detection.cpp)
+add_executable(test_stale_detection functional/test_stale_detection.cpp)
 target_link_libraries(test_stale_detection eshm)
 
-add_executable(test_performance test_performance.cpp)
-target_link_libraries(test_performance eshm)
-
-add_executable(test_error_handling test_error_handling.cpp)
+add_executable(test_error_handling functional/test_error_handling.cpp)
 target_link_libraries(test_error_handling eshm)
 
-add_executable(test_reconnect test_reconnect.cpp)
+add_executable(test_reconnect functional/test_reconnect.cpp)
 target_link_libraries(test_reconnect eshm)
+
+# Performance tests
+add_executable(test_benchmark_master performance/test_benchmark_master.cpp)
+target_link_libraries(test_benchmark_master eshm)
 
 # Add tests
 add_test(NAME BasicTest COMMAND test_basic)
